# sticky-label-generator

./: .gitignore  LICENSE.md  README.md  generate-labels.sh  pyproject.toml
formats/: Rayfilm_8pcs_105_70.yml  SKLabel_24pcs_70_36.yml
labels/: generator.py
